--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,19 @@
 <resources>
     <string name="app_name">Memory</string>
     <string name="tentativi">Tentativi:</string>
+
+    <string name="get_image">Scegli Immagine</string>
+    <string name="start">Inizia</string>
+
+    <string name="title_activity_show_image">ShowImage</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="vedi_immagine">Vedi immagine</string>
+    <string name="risolvi">Risolvi</string>
+    <string name="title_activity_settings">Settings</string>
+
+
+    <string name="opzioni">Opzioni</string>
+    <string name="livello">Livello</string>
+    <string name="pref_update_setting">Settings</string>
 </resources>
