--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="size4">gioco 4x4</string>
     <string name="size6">Gioco 6x6</string>
     <string name="size8">Gioco 8x8</string>
+    <string name="coppie">Coppie</string>
 </resources>
