--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,6 @@
     <string name="tentativi">Tentativi:</string>
 
 
-
-
     <string name="risolvi">Risolvi</string>
     <string name="title_activity_settings">Settings</string>
 
@@ -20,4 +18,15 @@
     <string name="coppie">Coppie</string>
     <string name="preview">Mostra soluzione</string>
     <string name="time">Tempo</string>
+    <string name="title_activity_classifica">ClassificaActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
+    <string name="classifica">Classifica</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
+    <string name="tab_text_3">Tab 3</string>
+    <string name="classifica4">Classifica gioco 4x4</string>
+    <string name="classifica6">Classifica gioco 6x6</string>
+    <string name="classifica8">Classifica gioco 8x8</string>
+    <string name="Ok">Ok</string>
 </resources>
